...
                        height: 20,
                      ),
                      Row(
                        mainAxisAlignment: MainAxisAlignment.center,
                        children: [
                          AppButton(
                            key: const Key('cancelButton'),
                            labelBtn: AppLocalizations.of(
                              context,
                            )!
                                .no,
                            onPressed: () {
                              overlayEntry?.remove();
                            },
                          ),
                          AppButton(
                            key: const Key('yesButton'),
                            labelBtn: localizations.yes,
                            onPressed: () async {
                              overlayEntry?.remove();
                              Overlay.of(context).insert(
                                _createConfirmOverlay(
                                  context,
...
