...
                                                      ),
                                                      gradient: ArchethicThemeBase
                                                          .gradientInputFormBackground,
                                                    ),
                                                    child: TextField(
                                                      key: const Key(
                                                        'newAccountName',
                                                      ),
                                                      style: const TextStyle(
                                                        fontSize: 14,
                                                      ),
                                                      autocorrect: false,
                                                      controller:
...
                    Row(
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: <Widget>[
                        AppButtonTinyConnectivity(
                          localizations.ok,
                          Dimens.buttonBottomDimens,
                          key: const Key('okButton'),
                          onPressed: () {
                            if (nameController.text.trim().isEmpty) {
                              UIUtil.showSnackbar(
                                localizations
                                    .introNewWalletGetFirstInfosNameBlank,
                                context,
...
