...
                    Row(
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: <Widget>[
                        AppButtonTinyConnectivity(
                          localizations.understandButton,
                          Dimens.buttonBottomDimens,
                          key: const Key('understandButton'),
                          onPressed: () {
                            context.go(
                              IntroBackupSeedPage.routerPage,
                              extra: name,
                            );
                          },
...
