...
                    Row(
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: <Widget>[
                        AppButtonTinyConnectivity(
                          localizations.iveBackedItUp,
                          Dimens.buttonBottomDimens,
                          key: const Key('iveBackedItUp'),
                          onPressed: () async {
                            context.go(
                              IntroBackupConfirm.routerPage,
                              extra: {'name': widget.name, 'seed': seed},
                            );
                          },
...
