...
        width: MediaQuery.of(context).size.width,
        child: Row(
          mainAxisAlignment: MainAxisAlignment.spaceEvenly,
          crossAxisAlignment: CrossAxisAlignment.start,
          children: <Widget>[
            ActionButton(
              key: const Key('sendUCObutton'),
              text: localizations.send,
              icon: Symbols.call_made,
              enabled:
                  connectivityStatusProvider == ConnectivityStatus.isConnected,
              onTap: () async {
                await context.push(
...
              },
            )
                .animate()
                .fade(duration: const Duration(milliseconds: 200))
                .scale(duration: const Duration(milliseconds: 200)),
            ActionButton(
              key: const Key('receiveUCObutton'),
              text: localizations.receive,
              icon: Symbols.call_received,
              onTap: () async {
                await CupertinoScaffold.showCupertinoModalBottomSheet(
                  context: context,
                  builder: (BuildContext context) {
...
