...
    );
    return Column(
      mainAxisAlignment: MainAxisAlignment.end,
      children: [
        BtnFooterPrimary(
          buttonText: localizations.next,
          key: const Key('seedWordsOKbutton'),
          onTap: () async {
            setState(() {
              _mnemonicError = '';
              isPressed = true;
            });

...
                                  borderRadius: BorderRadius.circular(20),
                                ),
                                child: Row(
                                  children: [
                                    Expanded(
                                      child: TextField(
                                        key: Key('seedWord$index'),
                                        style: Theme.of(context)
                                            .textTheme
                                            .bodyMedium
                                            ?.copyWith(
                                              color: _hasFocusList[index]
                                                  ? Colors.black
...
