...

    return Row(
      children: <Widget>[
        AppButtonTinyConnectivity(
          localizations.importWallet,
          Dimens.buttonBottomDimens,
          key: const Key('importWallet'),
          onPressed: () async {
            if (cguChecked) {
              await NetworkDialog.getDialog(
                context,
                ref,
                ref.read(
...
