...

class NFTTab extends ConsumerWidget {
  const NFTTab({
    super.key,
  });

  static const String routerPage = '/nftTab';

  @override
  Widget build(BuildContext context, WidgetRef ref) {
    return ProviderScope(
      overrides: [
        NftSearchBarProvider.initialNftSearchBar.overrideWithValue(
...
