...
                                    name: tokenInformationsProperty.name,
                                    value: tokenInformationsProperty.value);
                                tokenProperties.add(tokenProperty);
                              }

                              return NFTPreviewWidget(
                                  nftName: tokenInformations.name,
                                  nftDescription: tokenInformations
                                      .tokenProperties![0]
                                      .where((element) =>
                                          element.name == 'description')
                                      .first
                                      .value,
...
              ),
            ),
          ),
          Row(
            children: <Widget>[
              AppButton.buildAppButton(
                  const Key('createNFT'),
                  context,
                  AppButtonType.primary,
                  AppLocalization.of(context)!.createNFT,
                  Dimens.buttonBottomDimens, onPressed: () {
                Sheets.showAppHeightNineSheet(
                  context: context,
...
