...
                children: <Widget>[
                  Row(
                    children: <Widget>[
                      AppButtonTinyConnectivity(
                        AppLocalizations.of(context)!.createTheNFT,
                        Dimens.buttonTopDimens,
                        key: const Key('createTheNFT'),
                        onPressed: () async {
                          final isFileOk =
                              nftCreationNotifier.controlFile(context);
                          final isUrlOk =
                              nftCreationNotifier.controlURL(context);

...
