...
          nftNameController.text = nftCreation.name;
        }
      },
    );

    return AppTextField(
      key: const Key('nftCreationField'),
      focusNode: nftNameFocusNode,
      controller: nftNameController,
      cursorColor: theme.text,
      textInputAction: TextInputAction.done,
      labelText: AppLocalizations.of(context)!.nftNameHint,
      autocorrect: false,
...
