...
          ),
        if (nftCreation.symbol.isNotEmpty && displayNFTInfo)
          Padding(
            padding: const EdgeInsets.only(top: 10, bottom: 10),
            child: Align(
              child: Text(
                key: const Key('nftCreationConfirmation'),
                '[${nftCreation.symbol}]',
                style: ArchethicThemeStyles.textStyleSize12W100Primary,
              ),
            ),
          ),
        if (nftCreation.description.isNotEmpty && displayNFTInfo)
...
